fixed content scrolling and invisible default margin

--- a/styles.css
+++ b/styles.css
@@ -1,11 +1,9 @@
 body {
-    height: 100vh;
-    width: 100vw;
-    margin: 0;
-    overflow: hidden;
     font-family: Roboto, sans-serif;
     display: flex;
     flex-direction: column;
+    margin: 0px;
+    padding: 0px;
   }
 
 .div-1 {
